---------------------------------------------------------------

Changes in Go4 v5.3.x (Summer 2018)
1. Add Output of current filename to GUI log indow in case of MBS listmode list event source.
2. GUI local command execution: Provide catching std exceptions from ROOT in case of errors. 
   Added possibility to float histogram results in local macro divhistos.C


Changes in Go4 v5.3.0 (March 2018)
1. Go4 GUI (Qt4/5): Optional timestamp output in analysis terminal window before each text buffer. This feature can be 
   toggled by GUI menu "Settings/Terminal/PrintTimestamp". The format string (QDateTime) can be defined by menu
   "Settings/Terminal/Timestamp Format..." dialog. Both properties are stored in go4 settings. Other properties of Analysis Terminal
   such history and font, also appear as "Settings/Terminal" submenus now. Thanks Sven Augustin for this idea.
2. Store "Apply to all" flag of the viewpanel in the hotstart.
3. Provide "Auto zoom" flag for the viewpanel. If set, all histograms will be automatically zoomed into non-zero range.
   Useful with monitoring, also preserved in hotstart file.
4. One can specify GO4EXTRAINCLUDE shell variable, which automatically add to gInterpreter->AddIncludePath when
   starting go4analysis.  This required when user classes should be used in ACLiC with ROOT6.
5. Bugfix: Display of TGraph like objects in GUI will update also the TF1 functions contained in the graph,
   like fitter results. Previously the first TF1 fetched was never changed again.
6. Number of contour levels for histogram can be configured from "Color tools"
7. Fix error in http server browsing when folders names are similar list "Ch1" and "Ch11" 


Changes in Go4 v5.2.0 (January 2017)
1. Handle mouse wheel events in QtRoot interface, used in ROOT zooming
2. Bugfix in parameter Editor: format string precision for Float_t, Double_t, and Double32_t was reduced to defaults.
   Now it supports full range of data type and exponential formatting.