@@ -25,7 +25,8 @@ Changes in Go4 v5.3.x (Summer 2018)
 1. Add Output of current filename to GUI log indow in case of MBS listmode list event source.
 2. GUI local command execution: Provide catching std exceptions from ROOT in case of errors. 
    Added possibility to float histogram results in local macro divhistos.C
-
+3. Bugfixes in Thread class and interpreter mutex locking (SetProcessLineLock defaults) for ROOT > v6.12
+4. Bugfix in TGo4BufferQueue dtor cleanup, inconsistent for ROOT 6.14/04
 
 Changes in Go4 v5.3.0 (March 2018)
 1. Go4 GUI (Qt4/5): Optional timestamp output in analysis terminal window before each text buffer. This feature can be 
